# T3Toolbox

./: .buildinfo  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
_sources/: index.rst.txt
autoapi/: index.html
docs/: conf.py  index.rst  requirements.txt
examples/: jax_jit_example.py
t3toolbox/: OLD_orthogonalization.py  OLD_uniform.py  OLD_uniform_orthogonalization.py  base_variation_format.py  basis_coordinate_format.py  basis_coordinates_format.py  basis_variations_format.py  common.py  corewise.py  linalg.py  manifold.py  orthogonalization.py  probing.py  t3svd.py  tucker_tensor_train.py  uniform.py  uniform_basis_coordinates_format.py  uniform_basis_variations_format.py  uniform_manifold.py  uniform_probing.py  uniform_t3svd.py  uniform_tucker_tensor_train.py  util_linalg.py  weighted_tucker_tensor_train.py
t3tools/: base_variation_format.py  common.py  corewise.py  dense.py  linalg.py  manifold.py  orthogonalization.py  probing.py  t3_base_variation_format.py  t3_manifold.py  t3_operations.py  t3_orthogonalization.py  t3_orthogonalization_and_svd.py  t3_probing.py  t3_svd.py  t3svd.py  tt_basic_operations.py  tucker_tensor_train.py  uniform.py  uniform_manifold.py  uniform_orthogonalization.py  uniform_probing.py  uniform_t3svd.py  uniform_tucker_tensor_train.py  util.py
tests/: test_base_variation_format.py  test_linalg.py  test_manifold.py  test_orthogonalization.py  test_probing.py  test_t3svd.py  (+3 more)
(+3061 files in other folders)
